[package]
name = "spotify_token_manager"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/mari-rs/spotify-api-token-manager"
license = "MIT"
description = "Manage your access tokens easily"
keywords = ["spotify"]


[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
toml = "0.8.13"
lmdb-rs = "0.7.6"
dirs = "5.0.1"
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"
user-idle = "0.6.0"
base64 = "0.22.1"
actix-rt = "2.9.0"

